# mongomon

./: .flake8  .gitignore  .travis.yml  README.md  leftovers.sh  pyproject.toml
ci/: release.py
examples/wiki/: run.sh  wiki.py
mongomon/: __init__.py  thread_local_store.py
